<resources>
    <string name="app_name">Registrar</string>
    <string name="add_student">Add Student</string>
    <string name="manage_students">Manage Students</string>
    <string name="about_us">About Us</string>
    <string name="enter_your_name">Enter your name…</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_mobile_number">Enter Mobile number</string>
    <string name="class_label">Class :</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="select_date_of_birth">Select Date of Birth...</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_confirmation">Do you want to cancel?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="delete_confirmation">Do you want to delete this student?</string>
    <string name="app_settings">App Settings</string>
    <string name="source_code">Source code</string>
    <string name="send_feedback">Send Feedback</string>
</resources>