<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStudentActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/add_student"
        app:titleTextColor="@android:color/white" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/form_header" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/name_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="28dp"
                android:ems="10"
                tools:text="Ismail"
                android:hint="@string/enter_your_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/email_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="@+id/name_field"
                app:layout_constraintStart_toStartOf="@+id/name_field"
                app:layout_constraintTop_toBottomOf="@+id/name_field" />

            <EditText
                android:id="@+id/mobile_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/enter_mobile_number"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="@+id/email_field"
                app:layout_constraintStart_toStartOf="@+id/email_field"
                app:layout_constraintTop_toBottomOf="@+id/email_field" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/class_label"
                android:textSize="17sp"
                android:textColor="@color/textColorNormal"
                app:layout_constraintBottom_toBottomOf="@+id/class_spinner"
                app:layout_constraintStart_toStartOf="@+id/mobile_field" />

            <Spinner
                android:id="@+id/class_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="@+id/mobile_field"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/mobile_field" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textSize="17sp"
                android:text="@string/date_of_birth"
                android:textColor="@color/textColorNormal"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/date_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="17sp"
                android:hint="@string/select_date_of_birth"
                android:textColor="@color/textColorNormal"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="@+id/class_spinner"
                app:layout_constraintStart_toEndOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/gender"
                android:textSize="17sp"
                android:textColor="@color/textColorNormal"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <RadioGroup
                android:id="@+id/gender_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <RadioButton
                    android:id="@+id/male_option"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/female_option"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/female" />
            </RadioGroup>

            <Button
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="24dp"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/submit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gender_group" />

            <Button
                android:id="@+id/submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="24dp"
                android:text="@string/submit"
                app:backgroundTint="@color/colorAccent"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@+id/cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cancel"
                app:layout_constraintTop_toTopOf="@+id/cancel" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>