<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/add_student"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/white_button_bg"
            android:paddingTop="12dp"
            android:paddingBottom="16dp"
            android:textAllCaps="false"
            android:text="@string/add_student"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/white_button_bg"
            android:paddingTop="12dp"
            android:paddingBottom="16dp"
            android:text="@string/manage_students"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:layout_marginTop="32dp"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:background="@drawable/white_button_bg"
            android:paddingTop="12dp"
            android:paddingBottom="16dp"
            android:layout_height="50dp"
            android:text="@string/about_us"
            android:textAllCaps="false"
            android:layout_marginTop="32dp"/>
    </LinearLayout>
</FrameLayout>